--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
+    "date-fns": "^2.18.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
@@ -34,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
